--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <script src="http://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
     <script src="script.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Open+Sans' rel='stylesheet'
-          type='text/css'>
+    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600|Open+Sans+Condensed:700,300&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 </head>
 <body>
 
@@ -28,21 +28,27 @@
         <div class="m-map">
             <div class="m-map-order">
                 <p>Пожалуйста, укажите ваши требования</p>
-                <input type="email" placeholder="e-mail" class="m-map-order--email"/>
-                <span>На данный почтовый ящик вам прийдет ссылка с ответами от клубов. Вы можете <a href="№">войти</a>, чтобы больше не заполнять это поле</span>
-                <input type="text" placeholder="09:00" class="m-map-order--time"/>
+                <fieldset>
+                    <input type="email" placeholder="e-mail" class="m-map-order--email"/>
+                    <span>На данный почтовый ящик вам прийдет ссылка с ответами от клубов. Вы можете <a href="№">войти</a>, чтобы больше не заполнять это поле</span>
+                    <input type="text" placeholder="09:00" class="m-map-order--time"/>
 
-                <div class="m-map-order-date">
-                    <input type="text" placeholder="Дата"/>
-                </div>
+                    <div class="m-map-order-date">
+                        <input type="text" placeholder="Дата"/>
+                    </div>
+                </fieldset>
                 <button class="m-map-order--submit">Отправить запрос 53 клубам</button>
+                <div class="m-map-order-sub-actions">
+                    <a href="#">Расширенный запрос</a>
+                    <a href="#">Найти клуб по критериям</a>
+                </div>
             </div>
             <div class="m-map-label">
                 <p>Получите ответ от 53 клубов за 15 минут!</p>
                 <ul>
-                    <li>Быстро и удобно - не требуется обзванивать все клубы</li>
-                    <li>Абсолютно бесплатно</li>
-                    <li>Комментарии и оценки из многих источников</li>
+                    <li><i class="fa fa-circle-thin"></i>Быстро и удобно - не требуется обзванивать все клубы</li>
+                    <li><i class="fa fa-circle-thin"></i>Абсолютно бесплатно</li>
+                    <li><i class="fa fa-circle-thin"></i>Комментарии и оценки из многих источников</li>
                 </ul>
             </div>
         </div>
