better landing ui

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div id="map">
         <div class="m-map">
             <div class="m-map-order">
-                <p>Пожалуйста, укажите ваши требования</p>
+                <h3>Пожалуйста, укажите ваши требования</h3>
                 <fieldset>
                     <input type="email" placeholder="e-mail" class="m-map-order--email"/>
                     <span>На данный почтовый ящик вам прийдет ссылка с ответами от клубов. Вы можете <a href="№">войти</a>, чтобы больше не заполнять это поле</span>
@@ -47,7 +47,7 @@
                 </div>
             </div>
             <div class="m-map-label">
-                <p>Получите ответ от 53 клубов за 15 минут!</p>
+                <h1>Получите ответ от 53 клубов за 15 минут!</h1>
                 <ul>
                     <li><i class="fa fa-circle-thin"></i>Быстро и удобно - не требуется обзванивать все клубы</li>
                     <li><i class="fa fa-circle-thin"></i>Абсолютно бесплатно</li>
@@ -56,6 +56,67 @@
             </div>
         </div>
     </div>
+
+    <section class="m-landing-callouts">
+        <ul>
+            <li class="m-landing-callout">
+                <i class="fa fa-trophy is-wrapped"></i>
+
+                <div class="m-landing-callout-data">
+                    <h3>Secure Booking</h3>
+                    <h4>We ensure safest booking!</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae dolore eligendi fuga harum id laudantium magnam modi nemo nobis non odit, optio, perferendis, porro possimus praesentium quae quod sint. Dolorem.</p>
+                </div>
+            </li>
+            <li class="m-landing-callout">
+                <i class="fa fa-soccer-ball-o is-wrapped"></i>
+
+                <div class="m-landing-callout-data">
+                    <h3>Reliable Service</h3>
+                    <h4>We ensure safest booking!</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae dolore eligendi fuga harum id laudantium magnam modi nemo nobis non odit, optio, perferendis, porro possimus praesentium quae quod sint. Dolorem.</p>
+                </div>
+            </li>
+            <li class="m-landing-callout">
+                <i class="fa fa-thumbs-o-up is-wrapped"></i>
+
+                <div class="m-landing-callout-data">
+                    <h3>CustomerService</h3>
+                    <h4>We ensure safest booking!</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae dolore eligendi fuga harum id laudantium magnam modi nemo nobis non odit, optio, perferendis, porro possimus praesentium quae quod sint. Dolorem.</p>
+                </div>
+            </li>
+            <li class="m-landing-callout">
+                <i class="fa fa-toggle-on is-wrapped"></i>
+
+                <div class="m-landing-callout-data">
+                    <h3>No charges</h3>
+                    <h4>We ensure safest booking!</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae dolore eligendi fuga harum id laudantium magnam modi nemo nobis non odit, optio, perferendis, porro possimus praesentium quae quod sint. Dolorem.</p>
+                </div>
+            </li>
+        </ul>
+    </section>
+
+    <footer>
+        <div class="m-footer">
+            <ul class="m-footer-social">
+                <li>
+                    <a href="#"><i class="fa fa-facebook is-wrapped"></i></a>
+                </li>
+                <li>
+                    <a href="#"><i class="fa fa-twitter is-wrapped"></i></a>
+                </li>
+                <li>
+                    <a href="#"><i class="fa fa-vk is-wrapped"></i></a>
+                </li>
+            </ul>
+            <div class="m-footer--copyright">
+                2014 | All Rights Reserved | Made in Gramant
+            </div>
+        </div>
+    </footer>
+
     <script src="map.js"></script>
     <script src="header.blur.js"></script>
     <script src="script.js"></script>
