--- a/index.html
+++ b/index.html
@@ -23,8 +23,44 @@
 <body>
 
     <header class="js-header">
-        <div class="m-header-raw"></div>
+        <div class="m-header">
+            <div class="m-header-left">
+                <div class="m-header-left--call-us">
+                    <p>
+                        <span class="img-circle-small"><i class="fa fa-phone"></i></span>
+                        Позвоните нам +7 (499) 4586 2589
+                    </p>
+                </div>
+            </div>
 
+
+            <div class="m-header-logo-wrapper">
+                <div class="logo">
+                    <a href="index.html">
+                        <img src="/img/logo.png" alt="">
+                    </a>
+                </div>
+            </div>
+
+            <div class="m-header-right">
+                <div class="m-header-right--register">
+                    <a href="#">Login</a><!--
+                    --><a href="#">Register</a>
+                </div>
+
+                <div class="m-header-right--social">
+                    <a href="#" class="img-circle-small">
+                        <i class="fa fa-facebook"></i>
+                    </a>
+                    <a href="#" class="img-circle-small">
+                        <i class="fa fa-twitter"></i>
+                    </a>
+                    <a href="#" class="img-circle-small">
+                        <i class="fa fa-tumblr"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
     </header>
 
     <div id="map">
