--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="The HTML5 Herald">
     <meta name="author" content="SitePoint">
     <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="./css/scss/reset.css">
+    <link rel="stylesheet" href="./css/scss/common.css">
     <link rel="stylesheet" href="./css/scss/index.css">
     <link rel="stylesheet" href="./css/scss/header.css">
     <!--[if lt IE 9]>
