--- a/list.html
+++ b/list.html
@@ -131,6 +131,11 @@
                     <span class="m-item-details--price">700–1500 рублей</span>
                 </div>
                 <span class="m-item-details--description">Негромкий бар на «Китай-городе»</span>
+                <ul class="m-item-details--tags">
+                  <li><span><i class="fa fa-check"></i>Парковка</span></li>
+                  <li><span><i class="fa fa-check"></i>Кредитные карты</span></li>
+                  <li class="is-inactive"><span><i class="fa fa-times"></i>Душ</span></li>
+                </ul>
                 <div class="m-item-details--address-and-hours">
                     <div class="m-item-details-address">
                         <span class="m-item-details-address--street">Б.Спасоглинищевский пер., 3, стр. 5</span>
