--- a/list.html
+++ b/list.html
@@ -109,20 +109,22 @@
             </ul>
         </div>
         <div class="m-item">
-            <ul class="m-item-gallery">
-                <li>
-                    <img class="m-item-gallery--item" src="/img/places/detailed/1.jpg" alt=""/>
-                </li>
-                <li>
-                    <img class="m-item-gallery--item" src="/img/places/detailed/2.jpg" alt=""/>
-                </li>
-                <li>
-                    <img class="m-item-gallery--item" src="/img/places/detailed/3.jpg" alt=""/>
-                </li>
-                <li>
-                    <img class="m-item-gallery--item" src="/img/places/detailed/4.jpg" alt=""/>
-                </li>
-            </ul>
+            <div class="m-item-gallery">
+                <ul>
+                    <li>
+                        <img class="m-item-gallery--item" src="/img/places/detailed/1.jpg" alt=""/>
+                    </li>
+                    <li>
+                        <img class="m-item-gallery--item" src="/img/places/detailed/2.jpg" alt=""/>
+                    </li>
+                    <li>
+                        <img class="m-item-gallery--item" src="/img/places/detailed/3.jpg" alt=""/>
+                    </li>
+                    <li>
+                        <img class="m-item-gallery--item" src="/img/places/detailed/4.jpg" alt=""/>
+                    </li>
+                </ul>
+            </div>
 
             <div class="m-item-details">
                 <h4 class="m-item-details--title">Lumberjack Bar</h4>
