--- a/list.html
+++ b/list.html
@@ -18,11 +18,13 @@
     <![endif]-->
     <script src="http://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="http://underscorejs.org/underscore-min.js"></script>
     <script src="js/libs/angular-1.3.5.js"></script>
     <script src="js/libs/angular-ui-router.js"></script>
     <script src="js/app.js"></script>
     <script src="js/common.js"></script>
     <script src="js/list.js"></script>
+    <script src="js/data.js"></script>
     <script src="js/list.filter.js"></script>
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600|Open+Sans+Condensed:700,300&subset=latin,cyrillic'
