--- a/list.html
+++ b/list.html
@@ -20,7 +20,8 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="http://underscorejs.org/underscore-min.js"></script>
     <script src="js/libs/angular-1.3.5.js"></script>
-    <script src="js/libs/angular-ui-router.js"></script>
+    <script src="js/libs/vimeo.js"></script>
+    <script src="js/libs/utils.array-fix.js"></script>
     <script src="js/app.js"></script>
     <script src="js/common.js"></script>
     <script src="js/list.js"></script>
@@ -77,7 +78,6 @@
     </div>
 
     <div class="m-left" ng-controller="ListAndItemController">
-        <div ui-view></div>
         <div ng-controller="FilterController" ng-include="'/partials/partial-list-list.html'"></div>
         <div ng-controller="ItemController" ng-include="'/partials/partial-list-item.html'"></div>
     </div>
