--- a/list.html
+++ b/list.html
@@ -28,6 +28,8 @@
     <script src="js/data.js"></script>
     <script src="js/list.filter.js"></script>
     <script src="js/libs/angular.latest.js"></script>
+    <script src="js/libs/angular.onClickOutside.js"></script>
+    <script src="js/libs/angular.safeApply.js"></script>
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600|Open+Sans+Condensed:700,300&subset=latin,cyrillic'
           rel='stylesheet' type='text/css'>
